src/test/ui/closure_context/issue-26046-fn-once.stderr
error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnOnce`
  --> $DIR/issue-26046-fn-once.rs:4:19
   |
LL |     let closure = move || {
   |                   ^^^^^^^ this closure implements `FnOnce`, not `Fn`
LL |         vec
   |         --- closure is `FnOnce` because it moves the variable `vec` out of its environment
...
LL |     Box::new(closure)
   |     ----------------- the requirement to implement `Fn` derives from here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0525`.
